<resources>
    <string name="app_name">Cinerama Maps</string>
    <string name="googlekey">AIzaSyBqcSEk2m_gvYAbf1zmx_BjkhgVpKsV3oM</string>
    <string name="googlekey_other">AIzaSyAGxLMNvIuc8XpG21cOF3VkxbK1EkTpuzQ</string>
    <string name="skip">Skip</string>
    <string name="resetpassword">Reset Password</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="enter">Enter</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="abouttext">The About section provides information about the app, including its title, author, and version number.\nIt also displays information about the selected actor, obtained using web scraping techniques.\nFor any further assistance or inquiries, please feel free to contact us at</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="required">Required</string>
    <string name="deletedsuccessfully">Deleted Successfully</string>
    <string name="updatedsuccessfully">Updated Successfully</string>
    <string name="home">Home</string>
    <string name="setlocation">Set Location</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="enteremailaddress">Enter email address</string>
    <string name="enterotp">Enter OTP</string>
    <string name="confirm">Confirm</string>
    <string name="cancell">Cancel</string>
    <string name="resndotp">Resend OTP</string>
    <string name="forgotpass_txt">Forgot password</string>
    <string name="enteryouremailaddtoreset">Enter your email address</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="otpnotmatch">OTP not matched</string>
    <string name="plschkemaillink">Please check email</string>
    <string name="emailnotexist">Email not exist</string>
    <string name="skiplogin">Skip</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signupnow">Signup Now</string>
    <string name="emailvalid">Enter valid email address</string>
    <string name="iread">I have read the</string>
    <string name="termcon">Terms and Conditions</string>
    <string name="iacceptthem">and accept them.</string>
    <string name="ireadtermscond">I have read the <![CDATA[Terms & Conditions]]> and accept them.</string>
    <string name="mobile">Mobile</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="alreadyhaveaccount">Already have an account?</string>
    <string name="createnewaccount">Create New Account</string>
    <string name="selectlocation">Select Location</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="referalcode">Referal Code (Optional)</string>
    <string name="passwordnoatmatched">Password and Confirm Password not matched</string>
    <string name="signin">Login Now</string>
    <string name="remaining">Remaining</string>
    <string name="min">min</string>
    <string name="sec">seconds</string>
    <string name="whatwouldyouget">What you would get</string>
    <string name="loremtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc volutpat lobortis egestas viverra magna sed nam. Massa, magna vestibulum, ut neque, sagittis aliquet non sed semper view more</string>
    <string name="addextraitem">Add Extra item</string>
    <string name="pressagain">Press again..</string>
    <string name="changepassword">Change Password</string>
    <string name="language">Language</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="contactus">Write to us</string>
    <string name="termsandconditions">Term of services</string>
    <string name="logout">Logout</string>
    <string name="discounts">Discounts</string>
    <string name="invitefriend">Invite a friend</string>
    <string name="wallet">Wallet</string>
    <string name="yourbalance">Your Balance</string>
    <string name="topup">Top Up</string>
    <string name="transactionhistory">Transactions History</string>
    <string name="seemore">More</string>
    <string name="searchdata">Search...</string>
    <string name="inprogress">In progress</string>
    <string name="completed">Completed</string>
    <string name="giverating">Give Rating</string>
    <string name="review">Review</string>
    <string name="filter">Filter</string>
    <string name="alltime">All Time</string>
    <string name="selecttime">Select Time</string>
    <string name="fromtime">From Time</string>
    <string name="totime">To Time</string>
    <string name="favourite">Favourite</string>
    <string name="myorders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="myprofile">My Profile</string>
    <string name="updatedsucessfully">Update Successfully</string>
    <string name="addpromocode">Add Promo Code</string>
    <string name="apply">Apply</string>
    <string name="totaltopay">Total to Pay</string>
    <string name="proccedtocheckout">Proceed to check out</string>
    <string name="payment">Payment</string>
    <string name="makepayment">Make Payment</string>
    <string name="cardholdername">Card Holder Name</string>
    <string name="nameoncard">Name on Card</string>
    <string name="cardnumber">Card Number</string>
    <string name="entercardnumber">Enter card number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="securitycode">Security Code</string>
    <string name="cardnotempty">Card Name can\'t be empty</string>
    <string name="cardnumbernotempty">Card Number can\'t be empty</string>
    <string name="expdateempty">Exp Date can\'t be empty</string>
    <string name="yearnotempty">Year can\'t be empty</string>
    <string name="securitycodenotemp">Security Code can\'t be empty</string>
    <string name="emptydata">The expiration year or the security code of your card is not valid</string>
    <string name="payandcontinue">Pay and Continue</string>
    <string name="poweredbystripe">Powered by Stripe</string>
    <string name="currency">SAR</string>
    <string name="orderplaced">Ordered placed Successufly</string>
    <string name="pickuptheorder">Pickup the order</string>
    <string name="amount">Amount</string>
    <string name="yeep">Yuuuupi</string>
    <string name="topupsuccess">Topup successfully done</string>
    <string name="backtohome">Back to Home</string>
    <string name="writetous">Write to us</string>
    <string name="howcanwehelp">How can we help you?</string>
    <string name="writedownques">write down your questions and problems and we would be happy to help about it</string>
    <string name="writesomething">type something..</string>
    <string name="submit">Submit</string>
    <string name="inviteyourfrient">Invite your friends</string>
    <string name="yougetdiscounts">You will get discounts and copon code on every new joiner you invite</string>
    <string name="notifications">Notifications</string>
    <string name="phonenumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="reviews">Reviews</string>
    <string name="enterverificationcode">We sent you a verification code on your Email account</string>
    <string name="dontreceivecode">Dont Receive a Code?</string>
    <string name="resend">Resend</string>
    <string name="otpentertext">OTP code verification</string>
    <string name="congratulations">Congratulations</string>
    <string name="youraccountcreatedsucc">Your account Logged in and ready to use. welcome to CineramaMaps</string>
    <string name="continuetxt">Continue</string>
    <string name="viewdetail">View Detail</string>
    <string name="dismiss">Dismiss</string>
    <string name="tocontinue">to continue you need to accept our terms and conditions</string>
    <string name="left">left</string>
    <string name="offerfood">Items</string>
    <string name="items">ITEMS</string>
    <string name="needtologinfirst">Need to login to add this item in your cart</string>
    <string name="orderedon">ORDERED ON</string>
    <string name="subtotal">Sub Total</string>
    <string name="deliveryfee">Delivery Fee</string>
    <string name="discuount">Discount</string>
    <string name="total">Total</string>
    <string name="trackorder">Track Order</string>
    <string name="extraitems">Extra Items</string>
    <string name="orderid">Order Id</string>
    <string name="submittedsuccessfully">Submitted Successfully</string>
    <string name="selectrating">Select Rating</string>
    <string name="nothinginyourcart">Nothing in your cart</string>
    <string name="fillmeup">Fill me up, start ordering !</string>
    <string name="youhavenonotification">You have 0 notifications</string>
    <string name="noorders">No orders</string>
    <string name="notransaction">No transactions yet</string>
    <string name="afterfirsttra">After your first transaction, you will be able to see it here</string>
    <string name="selectamount">Select Amount to topup</string>
    <string name="wewillcontactsoon">Submitted</string>
    <string name="serverproblem">Server Problem</string>
    <string name="topuptowallet">Top Up to Wallet</string>
    <string name="youhave">You have</string>
    <string name="enteroldpassword">Enter old password</string>
    <string name="enternewpassword">Enter new password</string>
    <string name="confirmpasswordnotmatched">Confirm password not matched</string>
    <string name="passwordchangedsuccessfully">Your password reset successfully.</string>
    <string name="youroldpasswordnotmatched">Your old password not matched.</string>
    <string name="sharetxt">Install this application from google play store link https://play.google.com/store/apps/details?id=main.com.cineramamaps&amp;hl=en </string>
    <string name="please_wait">Please wait...</string>
    <string name="checkserver">Check Server problem</string>
    <string name="km">km</string>
    <string name="findyourshop">Find your address</string>
    <string name="selectadistance">Select distance range</string>
    <string name="choosethislocation">Choose this location</string>
    <string name="usemycurrentlocation">Use my current location</string>
    <string name="listing">Listing</string>
    <string name="mapview">MapView</string>
    <string name="you">You</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="chooseyourlanguage">Choose Your Language</string>
    <string name="submitreviewrating">Provide review rating</string>
    <string name="cad">CAD</string>
    <string name="kwh">KWH</string>
    <string name="chooseaddress">Choose address</string>
    <string name="menu">Menu</string>
    <string name="pleaseentervalidcode">Please enter valid code</string>
    <string name="plsenterotp">Please enter otp code</string>
    <string name="entertheotp">Enter OTP</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="welcomehead">Your trusted partner for all your construction needs</string>
    <string name="paymentsuccessful">Payment Successful</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleteconfirmation">Delete Confirmation</string>
    <string name="areyousurewanttodelete">Are you sure, Want to delete ?</string>
    <string name="gotothemap">Go to the Map</string>
    <string name="successfullysubscribed">Successfully Subscribed</string>
    <string name="rateprovider">Rate Provider</string>
</resources>