<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/mainlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/exit_app_but"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/back"
                android:backgroundTint="@color/colorPrimary" />

        </androidx.cardview.widget.CardView>

        <main.com.cineramamaps.customfont.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/giverating"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"></main.com.cineramamaps.customfont.BoldTextView>


    </RelativeLayout>
    </androidx.cardview.widget.CardView>
<ScrollView
    android:layout_below="@+id/mainlay"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


<ImageView
    android:src="@drawable/addratingmoney_ic"
    android:layout_width="match_parent"
    android:layout_height="180dp"></ImageView>


<main.com.cineramamaps.customfont.BoldTextView
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textSize="@dimen/extralarge"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:text="@string/rateprovider"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></main.com.cineramamaps.customfont.BoldTextView>
<main.com.cineramamaps.customfont.RegularTextView
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textSize="@dimen/medium"
    android:textColor="@color/black"

    android:text="@string/submitreviewrating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></main.com.cineramamaps.customfont.RegularTextView>

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_gravity="center"
            android:numStars="5"
            android:progressTint="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RatingBar>

        <EditText
            android:id="@+id/comment_et"
            android:padding="10dp"
            android:gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/border_grey_rec"
            android:layout_width="match_parent"
            android:layout_height="120dp"></EditText>







        <Button

            android:id="@+id/postitembut"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button_round_dra"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/medium" />

    </LinearLayout>

</ScrollView>
<ProgressBar
    android:visibility="gone"
    android:id="@+id/progressbar"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"></ProgressBar>
</RelativeLayout>

</layout>