<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:backgroundTint="@color/white"
            android:background="@drawable/button_round_dra"
            android:gravity="center_horizontal"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<ImageView
    android:layout_marginTop="25dp"
    android:src="@drawable/paymentsuccess"
    android:layout_width="80dp"
    android:layout_height="80dp"></ImageView>
<main.com.cineramamaps.customfont.BoldTextView
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:textColor="@color/red"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="20dp"
    android:text="@string/paymentsuccessful"
    android:layout_height="wrap_content"></main.com.cineramamaps.customfont.BoldTextView>
<main.com.cineramamaps.customfont.RegularTextView
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:textColor="@color/black"
    android:gravity="center"
    android:textSize="18dp"
    android:visibility="visible"
    android:text="@string/successfullysubscribed"
    android:layout_height="wrap_content"></main.com.cineramamaps.customfont.RegularTextView>

            <RelativeLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <main.com.cineramamaps.customfont.BoldTextView
                    android:id="@+id/pickuporder"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_round_dra"
                    android:gravity="center"
                    android:text="@string/gotothemap"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium"
                    android:visibility="visible"></main.com.cineramamaps.customfont.BoldTextView>


            </RelativeLayout>

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressbar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/cancel1"
            android:layout_marginTop="0dp"
            android:layout_width="40dp"
            android:layout_alignParentEnd="true"
            android:layout_height="40dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_cancel"></ImageView>
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>